--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -25,7 +25,7 @@
    "id": "1618f60a",
    "metadata": {},
    "source": [
-    "In this notebook we present and analyze the performance of Codenames AI. This system incorporates AI power into the popular game Codenames and can allow human players to team up with artificial intelligence to compete with others. The following experiment aims to test the effectiveness in communication of AI-AI and AI-Human teams. We will evaluate the results based on the number of turns taken to finish a game, whether assassin words are triggered, and accuracy in deciphering the clues. "
+    "In this notebook we present and analyze the performance of Codenames AI. This system incorporates AI power into the popular game Codenames and allows human players to team up with artificial intelligence to compete with others. The following experiment aims to test the effectiveness in communication of AI-AI and AI-Human teams with 3 datasets, GloVe, Word2Vec, and WordNet. We will evaluate the results based on the number of turns taken to finish a game, whether assassin words are triggered, and accuracy in understanding the clues. "
    ]
   },
   {
@@ -174,7 +174,7 @@
    "id": "79ec5bda",
    "metadata": {},
    "source": [
-    "Games on average finished quickest with the glove and word2vec dataset as they take less turns. We also take a look at this result amongst all the games that are complete, those with no assassin words triggered. When an assassin word is triggered, the game will end immediately and cause the number of turns to be low. Thus, we remove such games and can that the same datasets performed best in this situation.  "
+    "Games on average finished quickest with the GloVe and Word2Vec dataset as they take less turns. We also take a look at this result amongst all the games that are complete, those with no assassin words triggered. When an assassin word is triggered, the game will end immediately and cause the number of turns to be low. Thus, we remove such games and can see that the same datasets performed best in this situation.  "
    ]
   },
   {
@@ -217,7 +217,7 @@
    "id": "9837e032",
    "metadata": {},
    "source": [
-    "Although all three datasets performed well in not triggering the assassin word, which would immediately end the game, the glove and word2vec dataset was able to completely avoid it in the 100 game simulations. "
+    "Although all three datasets performed well in not triggering the assassin word, which would immediately end the game, the GloVe and Word2Vec dataset was able to completely avoid it in the 100 game simulations. "
    ]
   },
   {
@@ -260,7 +260,7 @@
    "id": "a948bd5e",
    "metadata": {},
    "source": [
-    "In terms of accuracy we measured the average accuracy in all simulations as well as in games that were complete, games in which the assassin word was not triggered. From the graph we see that all three datasets gave great results with again the glove and word2vec dataset achieving 100% in both accuracies. "
+    "In terms of accuracy we measured the average accuracy in all simulations as well as in games that were complete, games in which the assassin word was not triggered. From the graph we see that all three datasets gave great results with again the GloVe and Word2Vec dataset achieving 100% in both accuracies. "
    ]
   },
   {
@@ -407,7 +407,7 @@
    "id": "f1a380a0",
    "metadata": {},
    "source": [
-    "With human efforts, we see that the performance between the glove and word2vec dataset is more distinguishable and that the word2vec dataset was able to finish the games in the fewest number of turns in both the complete games and all games. "
+    "With human efforts, we see that the performance between the GloVe and Word2Vec dataset is more distinguishable and that the Word2Vec dataset was able to finish the games in the fewest number of turns in both the complete games and all games. "
    ]
   },
   {
@@ -450,7 +450,7 @@
    "id": "aa569027",
    "metadata": {},
    "source": [
-    "Similar to the AI-AI performance, the wup dataset performed the worst as it triggered the most number of assassin words. Word2vec also triggered the assassin word in roughly half of the simulations. In this part of the experiment, we can see that the glove dataset performed the best. "
+    "Similar to the AI-AI performance, the WordNet dataset performed the worst in triggering the most number of assassin words. Word2Vec also triggered the assassin word in roughly half of the simulations. In this part of the experiment, we can see that the GloVe dataset performed the best. "
    ]
   },
   {
@@ -493,7 +493,7 @@
    "id": "2dfca618",
    "metadata": {},
    "source": [
-    "The accuracy of humans correctly guessing the intended words is the highest when using the glove vectors dataset. "
+    "The accuracy of humans correctly guessing the intended words is the highest when using the GloVe dataset. "
    ]
   },
   {
@@ -669,7 +669,7 @@
    "id": "a2b3787d",
    "metadata": {},
    "source": [
-    "Through this experiment we tested the performance of our 3 datasets, glove, word2vec, and wup. The metrics used are the average number of turns taken to finish the game, number of assassin words triggered, and the accuracy of correctly guessing the intended words. The AI-AI interaction performed almost perfectly, but this is mostly due to them sharing the same knowledge base. In the AI-AI communication, we can see that the glove dataset performed the best across all metrics. In the AI-Human sections, we also conclude that the glove dataset worked the best when interacting with human players as it gave the highest accuracies, 0.59 and 0.65, and triggered the least amount of assassin words, 31. Overall we believe the glove vectors can allow human players to best understand the AI proposed clues."
+    "Through this experiment we tested the performance of 3 datasets, GloVe, Word2Vec, and WordNet. The metrics used are the average number of turns taken to finish the game, number of assassin words triggered, and the accuracy of correctly guessing the intended words. The AI-AI interaction performed almost perfectly, but this is mostly due to them sharing the same knowledge base. In the AI-AI communication, we can see that the GloVe dataset performed the best across all metrics. In the AI-Human sections, we also conclude that the GloVe dataset worked the best when interacting with human players as it gave the highest accuracies, 0.59 and 0.65, and triggered the least amount of assassin words, 31. Overall we believe GloVe can allow human players to best understand the AI proposed clues."
    ]
   },
   {
